--- a/project_beta/Makefile.prj
+++ b/project_beta/Makefile.prj
@@ -32,11 +32,16 @@ VPATH+=${RTOS_SOURCE_DIR}
 VPATH+=${RTOS_SOURCE_DIR}/portable/MemMang
 VPATH+=${RTOS_SOURCE_DIR}/portable/GCC/ARM_CM4F
 VPATH+=${ROOT}/libraries/CMSIS/Source
+VPATH+=${ROOT}/libraries/CMSIS/Device/ST/STM32F30x/Source
+VPATH+=${ROOT}/libraries/CMSIS/Device/ST/STM32F30x/Source/Templates
 VPATH+=${ROOT}/libraries/STM32F30x_StdPeriph_Driver/src
+VPATH+=${ROOT}/libraries/Filters-master
 
 VPATH+=${ROOT}/libraries/SystemView_Src_V240a/SEGGER
 VPATH+=${ROOT}/libraries/SystemView_Src_V240a/OS
 VPATH+=${ROOT}/libraries/SystemView_Src_V240a/Config
+
+VPATH+=${ROOT}/libraries/VESC
 
 VPATH+=${ROOT}/device
 
@@ -63,8 +68,11 @@ IPATH+=${ROOT}/definitions
 IPATH+=${RTOS_SOURCE_DIR}/include
 IPATH+=${RTOS_SOURCE_DIR}/portable/GCC/ARM_CM4F
 IPATH+=${ROOT}/libraries/CMSIS/Include
+IPATH+=${ROOT}/libraries/CMSIS/Device/ST/STM32F30x/Include
 IPATH+=${ROOT}/libraries/STM32F30x_StdPeriph_Driver/inc
 IPATH+=${ROOT}/libraries
+IPATH+=${ROOT}/libraries/VESC
+IPATH+=${ROOT}/libraries/Filters-master
 
 IPATH+=${ROOT}/libraries/SystemView_Src_V240a/SEGGER
 IPATH+=${ROOT}/libraries/SystemView_Src_V240a/OS
