--- a/project/Makefile.prj
+++ b/project/Makefile.prj
@@ -90,35 +90,35 @@ ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/main.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/versionfile.o
 
 # HAL Layer
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Adc.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/AdcChannel.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/AdcWithDma.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/CRC.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Dma.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Adc.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/AdcChannel.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/AdcWithDma.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/CRC.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Dma.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Exti.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Gpio.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/I2c.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Rtc.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Spi.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/SpiWithDma.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Tim.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimHalfBridge.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimHallDecoder.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimHallMeter.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimPwm.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Rtc.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Spi.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/SpiWithDma.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Tim.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimHalfBridge.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimHallDecoder.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimHallMeter.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimPwm.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Usart.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/UsartWithDma.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/PhaseCurrentSensor.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/UsartWithDma.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/PhaseCurrentSensor.o
 
 # DEV Layer
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Battery.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Battery.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/DebugInterface.o
 #${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Light.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/PIDController.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TemperatureSensor.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TemperatureSensor_Internal.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TemperatureSensor_NTC.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimSensorBldc.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/PIDController.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TemperatureSensor.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TemperatureSensor_Internal.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TemperatureSensor_NTC.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TimSensorBldc.o
 
 # OS Layer
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/CountingSemaphore.o
@@ -133,9 +133,8 @@ ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TaskInterruptable.o
 # App Layer
 #${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/BatteryObserver.o
 #${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/MotorController.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/DRV8302MotorController.o
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/DRV8302MotorController.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/Mpu.o 
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/VescMotorController.o
 
 # eMPL Driver
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/inv_mpu_dmp_motion_driver.o
@@ -157,7 +156,9 @@ ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/log_stm32.o ## Remove from build only for l
 #${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TestLed.o
 #${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TestRtc.o
 #${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TestSleep.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TestDRV8302.o
+${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TestGpio.o
+
+#${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/TestDRV8302.o
 
 # device
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/startup_stm32f30x.o
@@ -189,19 +190,6 @@ ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/tasks.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/port.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/heap_3.o
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/event_groups.o
-
-# VESC
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/vesc_bldc_interface_uart.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/vesc_buffer.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/vesc_bldc_interface.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/vesc_packet.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/vesc_crc.o
-
-# FILTERS
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/FilterDerivative.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/FilterOnePole.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/FilterTwoPole.o
-${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/RunningStatistics.o
 
 # SEGGER_SYSVIEW
 ${BINDIR}/${PRJ_NAME}.elf: ${OBJDIR}/SEGGER_SYSVIEW_Config_FreeRTOS.o
